remove many manual model logic files, decent model edit system in single models file.

--- a/client/admin.jade
+++ b/client/admin.jade
@@ -1,3 +1,9 @@
+template(name='admin')
+    +models
+    +user_table
+
+
+
 template(name='user_table')
     a#add_user.ui.button(href='/user/add')
         i.plus.icon
