--- a/client/edit.jade
+++ b/client/edit.jade
@@ -1,5 +1,5 @@
 template(name='edit')
     .ui.container
         with current_doc
-            each fields
-                +Template.dynamic template=edit_template
+            //- each fields
+            +Template.dynamic template=edit_template
