--- a/client/tasks.jade
+++ b/client/tasks.jade
@@ -1,6 +1,6 @@
 
 template(name='task_edit')
-    with task
+    with current_doc
         .ui.stackable.padded.grid
             .four.wide.column
                 h1.ui.center.aligned.header Edit Task
