--- a/components/cloud.tpl.jade
+++ b/components/cloud.tpl.jade
@@ -1,4 +1,4 @@
-#cloud.ui.basic.segment.center.aligned.container
+#cloud
     .ui.left.icon.input
         i.search.icon
         +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
