--- a/client/models.jade
+++ b/client/models.jade
@@ -1,83 +1,65 @@
+template(name='communication_edit')
+    .ui.header communication
+    +text_edit key='person'
+    +text_edit key='company'
+    +textarea_edit key='notes'
+    +boolean_edit key='followup'
+    +single_user_edit key='user'
+    +single_doc_edit key='work_order' ref_schema='work_order'
 
-template(name='edit_model')
-    with model
-        .ui.stackable.padded.grid
-            .four.wide.column
-                h1.ui.center.aligned.header edit model
-                a.ui.green.big.button(href="/m/#{slug}") save
-                #delete_model.ui.red.icon.button
-                    i.trash.icon
-            .twelve.wide.column
-                .ui.form
-                    +text_edit key='title'
-                    +text_edit key='slug'
-                    +text_edit key='icon'
-                    +textarea_edit key='description'
-                    +array_edit key='tags'
-                .ui.small.header fields
-                .ui.icon.button.add_field
-                    i.plus.icon
-                each fields
-                    +field_edit
-                    
-template(name='field_edit')
-    .ui.secondary.segment
-        +text_edit key='title'                    
-        +text_edit key='key'                    
-        +text_edit key='field_type'                    
-        +number_edit key='rank' label='rank'                  
+template(name='vendor_edit')
+    .ui.header vendor
+    +text_edit key='title'
+    +text_edit key='contact'
+    +number_edit key='telephone'
+    +textarea_edit key='notes'
+    
 
+template(name='vendor_view')
+    .ui.header vendor
+    +text_view key='title'
+    +text_view key='contact'
+    +number_view key='telephone'
+    +textarea_view key='notes'
+    
+template(name='photo_edit')
+    .ui.header Photo
+    +text_edit key='title'
+    +image_edit key='image'
+    +array_edit key='tags'
+    
+
+
+
+
+template(name='event_edit')
+    .ui.header communication
+    +text_edit key='person'
+    +text_edit key='company'
+    +textarea_edit key='notes'
+    +boolean_edit key='followup'
+    +single_user_edit key='user'
+    +single_doc_edit key='work_order' ref_schema='work_order'
+    
+
+template(name='service_edit')
+    with current_doc
+        .ui.container
+            .ui.header Edit Service
+            +text_edit key='title'
+            +textarea_edit key='description'
+            +array_edit key='tags'
+            +image_edit key='image'
             
-template(name='view_model')
-    with model
-        .ui.stackable.padded.grid
-            .four.wide.column
-                h1.ui.center.aligned.header #{title}
-                a.ui.icon.button(href="/model/edit/#{_id}")
-                    i.pencil.icon
-                .ui.button.add_child
-                    |add #{slug}
-            .twelve.wide.column
-                .ui.form
-                    +text_view key='title'
-                    +text_view key='slug'
-                    +text_view key='icon'
-                    +textarea_view key='description'
-                    +array_view key='tags'
-                each fields
-                    +field_view
-
-        
-template(name='field_view')
-    .ui.secondary.segment
-        +text_view key='title'                    
-        +text_view key='key'                    
-        +text_view key='field_type'                    
-        +number_view key='rank' label='rank'                  
-
-        
-        
-            
-template(name='models') 
-    .ui.container
-        h1.ui.center.aligned.header models
-        #add_model.ui.icon.button
-            i.green.plus.icon 
-        +cloud filter='model'
-        .ui.centered.cards
-            each models
-                +model
-                    
-                
-template(name='model')
-    .ui.card
+template(name='service')
+    .ui.fluid.card
+        if image
+            .image
+                +image_view key='image'
         .content
-            .header 
-                i.icon(class=icon)
-                |#{title}
-            .description
-                +text_view key='slug'
-            a.ui.icon.button(href="/model/edit/#{_id}") 
-                i.pencil.icon
-            a.ui.icon.button(href="/m/#{slug}") 
-                i.right.arrow.icon
+            .header #{title}
+            +textarea_view key='description'
+            +array_view key='tags'
+
+
+    
