simplifying client, rmeoving old edit profile

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -122,10 +122,10 @@ template(name='add_button')
 
 
 
-template(name='edit_button')
-    a.ui.button.icon.edit(title='Edit' href="/s/#{type}/#{_id}/edit")
-        i.blue.pencil.icon
-        |Edit
+//- template(name='edit_button')
+//-     a.ui.button.icon.edit(title='Edit' href="/s/#{type}/#{_id}/edit")
+//-         i.blue.pencil.icon
+//-         |Edit
 
 
 template(name='save_button')
