--- a/client/model.jade
+++ b/client/model.jade
@@ -53,7 +53,7 @@ template(name='view_model')
                     .ui.card
                         .content
                             +Template.dynamic template=model_doc
-
+                        +edit_button
         
 template(name='field_view')
     +text_view key='title'                    
