--- a/client/users.jade
+++ b/client/users.jade
@@ -126,3 +126,35 @@ template(name='user_contact_info')
                 .item #{zip}
             
             
+template(name='users') 
+    .ui.padded.grid
+        .row
+            .sixteen.wide.column
+                h1.ui.center.aligned.header Users
+                .ui.centered.cards
+                    each users
+                        +user
+                
+template(name='user')                
+    .ui.card
+        .image
+            //- a(href="/user/#{username}/view")
+            img.ui.fluid.image(src="{{c.url image_id height=400 width=400 background='white' crop='pad'}}")
+        .content
+            a(href="/user/#{username}/view")
+                h2.ui.center.aligned.header #{first_name} #{last_name} #{username}
+            each five_tags
+                .ui.compact.small.circular.button.person_tag(class=tag_class) 
+                    strong #{this}
+        .content
+            +text_view key='first_name' label='First Name'
+            +text_view key='last_name' label='Last Name'
+            +text_view key='address' label='Address'
+            +number_view key='unit_number' label='Unit #'
+            +number_view key='building_number' label='Building #'
+            +text_view key='email' label='Email'
+            +phone_view key='phone' label='Phone'
+            +date_view key='start_date' label='Start Date'
+            +date_view key='expiration_date' label='Expiration Date'
+
+            
