--- a/client/docs.jade
+++ b/client/docs.jade
@@ -23,6 +23,21 @@
 //             .ui.compact.button.select_tag(class=cloud_tag_class) #{this.name}
 //                 small #{this.count}
 
+template(name='doc_cloud')
+    #cloud.ui.basic.segment.container
+        .ui.left.icon.input
+            i.search.icon
+            +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
+        if selected_tags
+            #clear_tags.ui.primary.icon.circular.large.button
+                i.remove.icon
+            each selected_tags
+                .unselect_tag.ui.primary.circular.large.button
+                    strong #{this}
+        each all_tags
+            .ui.circular.basic.button.select_tag(class=cloud_tag_class) 
+                strong #{this.name}
+
 
 template(name='docs')
     .ui.container
@@ -57,3 +72,16 @@ template(name='view')
                     i.pencil.icon.icon
             else
                 | by #{author.username} #{when}
+                
+                
+template(name='edit')
+    with current_doc
+        .ui.stackable.padded.grid
+            .four.wide.column
+                h1.ui.center.aligned.header Edit #{type}
+                a.ui.green.big.circular.button(href="/m/#{type}") Save
+                #delete_model.ui.red.icon.circular.button
+                    i.trash.icon
+            .twelve.wide.column
+                //- each fields
+                +Template.dynamic template=edit_template
